--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Canneli Audio Pro - Web Edition</title>
+  <title>Canneli Audio Beta</title>
   
-  <!-- FAVICON: Onda sonora estilizada -->
+  <!-- ÍCONES (Favicon e Apple Touch) -->
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%23ff0055'/%3E%3Cstop offset='100%25' stop-color='%238800ff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='64' height='64' rx='16' fill='%2308000a'/%3E%3Cpath d='M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0' stroke='url(%23g)' stroke-width='5' stroke-linecap='round'/%3E%3C/svg%3E">
+  <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%23ff0055'/%3E%3Cstop offset='100%25' stop-color='%238800ff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='64' height='64' rx='16' fill='%2308000a'/%3E%3Cpath d='M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0' stroke='url(%23g)' stroke-width='5' stroke-linecap='round'/%3E%3C/svg%3E">
 
-  <!-- PWA MANIFEST (Embutido via Data URI para funcionar em arquivo único) -->
-  <link rel="manifest" href='data:application/manifest+json,{"name":"Canneli Audio Pro","short_name":"Canneli","start_url":".","display":"standalone","background_color":"#08000a","theme_color":"#ff0055","icons":[{"src":"data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 64 64%27%3E%3Cdefs%3E%3ClinearGradient id=%27g%27 x1=%270%25%27 y1=%270%25%27 x2=%27100%25%27 y2=%27100%25%27%3E%3Cstop offset=%270%25%27 stop-color=%27%23ff0055%27/%3E%3Cstop offset=%27100%25%27 stop-color=%27%238800ff%27/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width=%2764%27 height=%2764%27 rx=%2716%27 fill=%27%2308000a%27/%3E%3Cpath d=%27M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0%27 stroke=%27url(%23g)%27 stroke-width=%275%27 stroke-linecap=%27round%27/%3E%3C/svg%3E","sizes":"192x192","type":"image/svg+xml"}]}'>
+  <!-- PWA MANIFEST (Configurado com Nome Beta e Ícone Próprio) -->
+  <link rel="manifest" href='data:application/manifest+json,{"name":"Canneli Audio Beta","short_name":"Canneli Beta","start_url":".","display":"standalone","background_color":"#08000a","theme_color":"#ff0055","icons":[{"src":"data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 64 64%27%3E%3Cdefs%3E%3ClinearGradient id=%27g%27 x1=%270%25%27 y1=%270%25%27 x2=%27100%25%27 y2=%27100%25%27%3E%3Cstop offset=%270%25%27 stop-color=%27%23ff0055%27/%3E%3Cstop offset=%27100%25%27 stop-color=%27%238800ff%27/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width=%2764%27 height=%2764%27 rx=%2716%27 fill=%27%2308000a%27/%3E%3Cpath d=%27M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0%27 stroke=%27url(%23g)%27 stroke-width=%275%27 stroke-linecap=%27round%27/%3E%3C/svg%3E","sizes":"192x192","type":"image/svg+xml"},{"src":"data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 64 64%27%3E%3Cdefs%3E%3ClinearGradient id=%27g%27 x1=%270%25%27 y1=%270%25%27 x2=%27100%25%27 y2=%27100%25%27%3E%3Cstop offset=%270%25%27 stop-color=%27%23ff0055%27/%3E%3Cstop offset=%27100%25%27 stop-color=%27%238800ff%27/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width=%2764%27 height=%2764%27 rx=%2716%27 fill=%27%2308000a%27/%3E%3Cpath d=%27M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0%27 stroke=%27url(%23g)%27 stroke-width=%275%27 stroke-linecap=%27round%27/%3E%3C/svg%3E","sizes":"512x512","type":"image/svg+xml"}]}'>
 
   <!-- Fonte Montserrat -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -293,7 +294,7 @@
   
   <main class="app-shell">
     <header>
-      <h3><strong>Canneli</strong> Audio <span class="badge-pro">ULTRA</span></h3>
+      <h3><strong>Canneli</strong> Audio <span class="badge-pro">BETA</span></h3>
       <!-- Botão de Instalar PWA -->
       <button id="btnInstall" title="Instalar Aplicativo">
         <svg viewBox="0 0 24 24"><path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/></svg>
