--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%23ff0055'/%3E%3Cstop offset='100%25' stop-color='%238800ff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='64' height='64' rx='16' fill='%2308000a'/%3E%3Cpath d='M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0' stroke='url(%23g)' stroke-width='5' stroke-linecap='round'/%3E%3C/svg%3E">
   <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%23ff0055'/%3E%3Cstop offset='100%25' stop-color='%238800ff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='64' height='64' rx='16' fill='%2308000a'/%3E%3Cpath d='M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0' stroke='url(%23g)' stroke-width='5' stroke-linecap='round'/%3E%3C/svg%3E">
 
-  <!-- PWA MANIFEST (Configurado com Nome Beta e Ícone Próprio) -->
-  <link rel="manifest" href='data:application/manifest+json,{"name":"Canneli Audio Beta","short_name":"Canneli Beta","start_url":".","display":"standalone","background_color":"#08000a","theme_color":"#ff0055","icons":[{"src":"data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 64 64%27%3E%3Cdefs%3E%3ClinearGradient id=%27g%27 x1=%270%25%27 y1=%270%25%27 x2=%27100%25%27 y2=%27100%25%27%3E%3Cstop offset=%270%25%27 stop-color=%27%23ff0055%27/%3E%3Cstop offset=%27100%25%27 stop-color=%27%238800ff%27/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width=%2764%27 height=%2764%27 rx=%2716%27 fill=%27%2308000a%27/%3E%3Cpath d=%27M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0%27 stroke=%27url(%23g)%27 stroke-width=%275%27 stroke-linecap=%27round%27/%3E%3C/svg%3E","sizes":"192x192","type":"image/svg+xml"},{"src":"data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 64 64%27%3E%3Cdefs%3E%3ClinearGradient id=%27g%27 x1=%270%25%27 y1=%270%25%27 x2=%27100%25%27 y2=%27100%25%27%3E%3Cstop offset=%270%25%27 stop-color=%27%23ff0055%27/%3E%3Cstop offset=%27100%25%27 stop-color=%27%238800ff%27/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width=%2764%27 height=%2764%27 rx=%2716%27 fill=%27%2308000a%27/%3E%3Cpath d=%27M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0%27 stroke=%27url(%23g)%27 stroke-width=%275%27 stroke-linecap=%27round%27/%3E%3C/svg%3E","sizes":"512x512","type":"image/svg+xml"}]}'>
+  <!-- PWA MANIFEST -->
+  <link rel="manifest" href='data:application/manifest+json,{"name":"Canneli Audio Beta","short_name":"Canneli","start_url":".","display":"standalone","background_color":"#08000a","theme_color":"#ff0055","description":"Gravador de audio profissional","icons":[{"src":"data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 64 64%27%3E%3Cdefs%3E%3ClinearGradient id=%27g%27 x1=%270%25%27 y1=%270%25%27 x2=%27100%25%27 y2=%27100%25%27%3E%3Cstop offset=%270%25%27 stop-color=%27%23ff0055%27/%3E%3Cstop offset=%27100%25%27 stop-color=%27%238800ff%27/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width=%2764%27 height=%2764%27 rx=%2716%27 fill=%27%2308000a%27/%3E%3Cpath d=%27M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0%27 stroke=%27url(%23g)%27 stroke-width=%275%27 stroke-linecap=%27round%27/%3E%3C/svg%3E","sizes":"192x192","type":"image/svg+xml"},{"src":"data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 64 64%27%3E%3Cdefs%3E%3ClinearGradient id=%27g%27 x1=%270%25%27 y1=%270%25%27 x2=%27100%25%27 y2=%27100%25%27%3E%3Cstop offset=%270%25%27 stop-color=%27%23ff0055%27/%3E%3Cstop offset=%27100%25%27 stop-color=%27%238800ff%27/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width=%2764%27 height=%2764%27 rx=%2716%27 fill=%27%2308000a%27/%3E%3Cpath d=%27M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0%27 stroke=%27url(%23g)%27 stroke-width=%275%27 stroke-linecap=%27round%27/%3E%3C/svg%3E","sizes":"512x512","type":"image/svg+xml"}]}'>
 
   <!-- Fonte Montserrat -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,6 @@
 
   <style>
     :root {
-      /* Palette Premium Red/Purple */
       --primary: #ff0055;
       --secondary: #8800ff;
       --accent: #ffffff;
@@ -117,7 +116,7 @@
       margin-left: 6px; font-weight: 800; box-shadow: var(--glow-primary);
     }
 
-    /* ESTILO DO BOTÃO DE INSTALAÇÃO */
+    /* ESTILO DO BOTÃO DE INSTALAÇÃO - Atenção ao display */
     #btnInstall {
       background: rgba(255, 255, 255, 0.08);
       border: 1px solid rgba(255, 255, 255, 0.2);
@@ -129,7 +128,7 @@
       text-transform: uppercase;
       font-weight: 700;
       letter-spacing: 1px;
-      display: none; /* Escondido por padrão, aparece via JS */
+      display: none; /* Controlado pelo JS */
       align-items: center;
       gap: 6px;
       transition: all 0.3s ease;
@@ -396,18 +395,40 @@
   </main>
 
   <script>
+    // --- SERVICE WORKER (Necessário para PWA) ---
+    // Criamos um SW inline via Blob URL para satisfazer o requisito do Chrome sem arquivo extra.
+    if ('serviceWorker' in navigator) {
+       const swCode = `
+         self.addEventListener('install', (e) => {
+           self.skipWaiting();
+         });
+         self.addEventListener('activate', (e) => {
+           e.waitUntil(self.clients.claim());
+         });
+         self.addEventListener('fetch', (e) => {
+           e.respondWith(fetch(e.request));
+         });
+       `;
+       const blob = new Blob([swCode], {type: 'application/javascript'});
+       const swUrl = URL.createObjectURL(blob);
+       
+       navigator.serviceWorker.register(swUrl)
+         .then(r => console.log('SW registrado com sucesso:', r))
+         .catch(e => console.log('Erro ao registrar SW:', e));
+    }
+
     // --- LÓGICA DE INSTALAÇÃO PWA ---
     let deferredPrompt;
     const installBtn = document.getElementById('btnInstall');
 
     window.addEventListener('beforeinstallprompt', (e) => {
-      // Impede o Chrome de mostrar o prompt nativo automaticamente
+      // Impede o Chrome de mostrar o prompt nativo automaticamente na barra
       e.preventDefault();
-      // Guarda o evento para usar depois
+      // Guarda o evento
       deferredPrompt = e;
-      // Mostra o nosso botão customizado
+      // Mostra o botão customizado
       installBtn.style.display = 'flex';
-      console.log("App pronto para instalar!");
+      console.log("App pronto para instalar (Evento capturado)!");
     });
 
     installBtn.addEventListener('click', async () => {
