--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%23ff0055'/%3E%3Cstop offset='100%25' stop-color='%238800ff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='64' height='64' rx='16' fill='%2308000a'/%3E%3Cpath d='M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0' stroke='url(%23g)' stroke-width='5' stroke-linecap='round'/%3E%3C/svg%3E">
   <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%23ff0055'/%3E%3Cstop offset='100%25' stop-color='%238800ff'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='64' height='64' rx='16' fill='%2308000a'/%3E%3Cpath d='M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0' stroke='url(%23g)' stroke-width='5' stroke-linecap='round'/%3E%3C/svg%3E">
 
-  <!-- PWA MANIFEST -->
-  <link rel="manifest" href='data:application/manifest+json,{"name":"Canneli Audio Beta","short_name":"Canneli","start_url":".","display":"standalone","background_color":"#08000a","theme_color":"#ff0055","description":"Gravador de audio profissional","icons":[{"src":"data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 64 64%27%3E%3Cdefs%3E%3ClinearGradient id=%27g%27 x1=%270%25%27 y1=%270%25%27 x2=%27100%25%27 y2=%27100%25%27%3E%3Cstop offset=%270%25%27 stop-color=%27%23ff0055%27/%3E%3Cstop offset=%27100%25%27 stop-color=%27%238800ff%27/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width=%2764%27 height=%2764%27 rx=%2716%27 fill=%27%2308000a%27/%3E%3Cpath d=%27M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0%27 stroke=%27url(%23g)%27 stroke-width=%275%27 stroke-linecap=%27round%27/%3E%3C/svg%3E","sizes":"192x192","type":"image/svg+xml"},{"src":"data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 64 64%27%3E%3Cdefs%3E%3ClinearGradient id=%27g%27 x1=%270%25%27 y1=%270%25%27 x2=%27100%25%27 y2=%27100%25%27%3E%3Cstop offset=%270%25%27 stop-color=%27%23ff0055%27/%3E%3Cstop offset=%27100%25%27 stop-color=%27%238800ff%27/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width=%2764%27 height=%2764%27 rx=%2716%27 fill=%27%2308000a%27/%3E%3Cpath d=%27M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0%27 stroke=%27url(%23g)%27 stroke-width=%275%27 stroke-linecap=%27round%27/%3E%3C/svg%3E","sizes":"512x512","type":"image/svg+xml"}]}'>
+  <!-- PWA MANIFEST (Ícones corrigidos para 192 e 512 com 'any maskable') -->
+  <link rel="manifest" href='data:application/manifest+json,{"name":"Canneli Audio Beta","short_name":"Canneli","start_url":".","id":"/","display":"standalone","background_color":"#08000a","theme_color":"#ff0055","description":"Gravador de audio profissional","icons":[{"src":"data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 64 64%27%3E%3Cdefs%3E%3ClinearGradient id=%27g%27 x1=%270%25%27 y1=%270%25%27 x2=%27100%25%27 y2=%27100%25%27%3E%3Cstop offset=%270%25%27 stop-color=%27%23ff0055%27/%3E%3Cstop offset=%27100%25%27 stop-color=%27%238800ff%27/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width=%2764%27 height=%2764%27 rx=%2716%27 fill=%27%2308000a%27/%3E%3Cpath d=%27M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0%27 stroke=%27url(%23g)%27 stroke-width=%275%27 stroke-linecap=%27round%27/%3E%3C/svg%3E","sizes":"192x192","type":"image/svg+xml","purpose":"any maskable"},{"src":"data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 64 64%27%3E%3Cdefs%3E%3ClinearGradient id=%27g%27 x1=%270%25%27 y1=%270%25%27 x2=%27100%25%27 y2=%27100%25%27%3E%3Cstop offset=%270%25%27 stop-color=%27%23ff0055%27/%3E%3Cstop offset=%27100%25%27 stop-color=%27%238800ff%27/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width=%2764%27 height=%2764%27 rx=%2716%27 fill=%27%2308000a%27/%3E%3Cpath d=%27M12 32h0m8-12v24m8-36v48m8-32v16m8-24v32m8-8h0%27 stroke=%27url(%23g)%27 stroke-width=%275%27 stroke-linecap=%27round%27/%3E%3C/svg%3E","sizes":"512x512","type":"image/svg+xml","purpose":"any maskable"}]}'>
 
   <!-- Fonte Montserrat -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -396,8 +396,12 @@
 
   <script>
     // --- SERVICE WORKER (Necessário para PWA) ---
-    // Criamos um SW inline via Blob URL para satisfazer o requisito do Chrome sem arquivo extra.
     if ('serviceWorker' in navigator) {
+       // Verificação de protocolo
+       if (window.location.protocol === 'file:') {
+           console.warn("Aviso: Instalação PWA não funciona em protocolo file://. Use um servidor local (http/https).");
+       }
+
        const swCode = `
          self.addEventListener('install', (e) => {
            self.skipWaiting();
@@ -422,25 +426,18 @@
     const installBtn = document.getElementById('btnInstall');
 
     window.addEventListener('beforeinstallprompt', (e) => {
-      // Impede o Chrome de mostrar o prompt nativo automaticamente na barra
       e.preventDefault();
-      // Guarda o evento
       deferredPrompt = e;
-      // Mostra o botão customizado
       installBtn.style.display = 'flex';
       console.log("App pronto para instalar (Evento capturado)!");
     });
 
     installBtn.addEventListener('click', async () => {
       if (!deferredPrompt) return;
-      // Mostra o prompt de instalação nativo
       deferredPrompt.prompt();
-      // Espera a escolha do usuário
       const { outcome } = await deferredPrompt.userChoice;
       console.log(`Usuário escolheu: ${outcome}`);
-      // Reseta a variável
       deferredPrompt = null;
-      // Esconde o botão
       installBtn.style.display = 'none';
     });
 
