--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
     installBtn.addEventListener('click', async () => {
       if (!deferredPrompt) {
         // Fallback com instruções corrigidas para Desktop e Mobile
-        alert("Instalação Manual:\n\n💻 PC/Chrome: Clique no ícone de 'Instalar' na barra de endereços (canto direito superior) ou vá ao Menu > 'Guardar e partilhar' > 'Instalar Canneli Audio Beta'.\n\n📱 Android: Menu > 'Adicionar ao ecrã principal'.\n\n📱 iOS: Botão Partilhar > 'Adicionar ao ecrã principal'.");
+        alert("Instalação Manual:\n\n💻 PC/Chrome: Clique no ícone de 'Instalar' na barra de endereços (canto direito superior) ou vá ao Menu > 'Transmitir, salvar ou compartilhar' > 'Instalar Canneli Audio Beta'.\n\n📱 Android: Menu > 'Adicionar ao ecrã principal'.\n\n📱 iOS: Botão Partilhar > 'Adicionar ao ecrã principal'.");
         return;
       }
       deferredPrompt.prompt();
